client/landing/stepper/declarative-flow/internals/steps-repository/domain-transfer-domains/styles.scss
@import "@wordpress/base-styles/breakpoints";
@import "@automattic/onboarding/styles/mixins";

.domain-transfer {
	height: 100%;
	padding: 60px 0 0;
	margin: 0 auto;
	max-width: 1024px;
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 30px;

	.flow-progress.progress-bar {
		display: none;
	}

	button:disabled {
		pointer-events: none;
	}

	.is-invisible-field {
		visibility: hidden;
		// On mobile, display:none, keeps the layout without breaking it
		@media (max-width: $break-mobile ) {
			display: none;
		}
	}

	.components-button:focus:not(:disabled) {
		border: 0;
		outline: none;
		box-shadow: unset;
	}

	.components-button:active:not(:disabled) {
		box-shadow: 0 0 0 var(--wp-admin-border-width-focus) var(--wp-components-color-accent, var(--wp-admin-theme-color, #007cba));
		outline: 3px solid transparent;
	}

	&.domains {
		padding: 0;
		width: 754px;

		.step-container__header {
			margin-top: 96px;

			.formatted-header__title {
				font-size: 2.75rem;
			}
		}

		.step-container__navigation.action-buttons {
			position: absolute;
			top: 8px;
			inset-inline-start: 72px;
			inset-inline-end: 24px;
			padding: 1px 0 0;
			background-color: transparent;
			border: none;
			box-shadow: none;
		}
		.formatted-header__subtitle {
			display: flex;
			flex-direction: row;
			justify-content: center;
			span {
				display: block;
				@media (min-width: $break-medium ) {
					width: 60%;
				}
			}
		}

		@media (min-width: $break-medium ) {
			.formatted-header .formatted-header__subtitle {
				text-align: center;
			}
		}

		@media (max-width: $break-medium ) {
			.step-container__header {
				width: 100%;
				margin-top: 48px;

				.formatted-header__title {
					font-size: 2rem;
					text-align: left;
				}
			}

			gap: 0;
			justify-content: flex-start;
			margin-top: 24px;
			width: 100%;
		}
	}

	&.step-container {
		@media (max-width: $break-medium ) {
			padding: 0 20px;
		}

		.step-container__jetpack-powered {
			padding-top: 65px;
			padding-bottom: 56px;
			margin: 0;

			@media (min-width: $break-large ) {
				margin-top: auto;
			}

			@media (max-width: $break-large ) {
				padding-bottom: 32px;
			}
		}
	}


	.domains .step-container__content {
		flex-shrink: 0;
		width: 100%;

		@media (max-width: $break-medium ) {
			min-height: auto;
		}
	}

	.signup-header {
		z-index: 1;

		h1 {
			display: none;
		}
	}

	.domains__domain-info {
		display: flex;
		gap: 20px;
		align-items: flex-end;
		flex-wrap: wrap;

		@media (max-width: $break-medium ) {
			align-items: normal;
			flex-direction: column;
		}

		.form-fieldset {
			margin-bottom: 0;
		}

		.form-setting-explanation {
			margin-top: 0;
		}
	}

	.domains__domain-validation {
		margin-top: 12px;

		&.is-mobile {
			display: none;
		}

		&.is-desktop {
			display: block;
		}

		@media (max-width: $break-medium ) {
			margin-top: 0;

			&.is-mobile {
				display: block;
			}

			&.is-desktop {
				display: none;
			}
		}
	}

	.domains__domain-domain {
		flex: 7;
	}

	.domains__domain-key {
		flex: 3;

		.info-popover {
			margin-left: 5px;
			padding: 2px;
		}

		.info-popover:focus {
			outline: 1px solid var(--studio-blue-50);
		}
	}

	.domains__domain-price {
		flex: 2;

		.domains__domain-price-number {
			align-items: center;
			font-weight: 500;
			line-height: 24px;

			@media (max-width: $break-medium ) {
				align-items: flex-start;
			}

			&.raw-price {
				color: var(--studio-gray-40);
				font-size: 0.75rem;
				font-weight: 400;
				line-height: 20px;
				margin-left: 4px;
				text-decoration-line: line-through;
			}

			&.disabled {
				color: var(--studio-gray-5);
			}
		}

		.domains__domain-price-value {
			align-items: flex-start;
			flex-direction: column;
			justify-content: center;

			.domains__domain-price-text {
				color: var(--studio-green-50);
				font-size: 0.75rem;
				font-weight: 500;
				line-height: 16px;
			}
		}
	}

	.domains__domain-domain,
	.domains__domain-key,
	.domains__domain-price {

		// Show the titles on mobile and hide on desktop (except for the first one)
		.form-label,
		.info-popover {
			display: none;
		}

		.form-label {
			font-size: 0.875rem;
			font-weight: 400;


			&.is-first-row {
				display: inline-block;
				white-space: nowrap;
				line-height: 24px;
			}

			@media (max-width: $break-medium ) {
				display: block;
			}
		}

		.info-popover.is-first-row {
			display: inline-block;

			@media (max-width: $break-mobile ) {
				margin-left: 3px;
			}

			svg {
				margin-bottom: -4px;
			}
		}

		.form-fieldset {
			position: relative;

			div {
				height: 40px;
				display: flex;
			}

			input {
				padding-right: 30px;
				text-overflow: ellipsis;
			}

			.domains__domain-input-icon-container {
				position: absolute;
				right: 5px;
				width: 24px;
				height: 24px;
				bottom: 8px;

				.domains__domain-input-icon {
					&.is-valid {
						fill: #008a20;
					}

					&.is-not-valid {
						fill: #d63638;
					}
				}
			}
		}

		label {
			color: var(--gray-gray-60, #50575e);
			font-size: 1rem;
			font-weight: 500;
		}
	}


	.domains__domain-controls {
		display: flex;
		gap: 16px;
		flex: 1;

		button {
			&:hover {
				color: var(--wp-components-color-accent, var(--wp-admin-theme-color, var(--studio-blue-60)));
			}
		}

		@media (min-width: $break-medium ) {
			margin-left: -25px;
		}

		.domains__domain-refresh {
			button {
				cursor: pointer;

				.refresh-label {
					margin-left: 4px;
				}
			}

			.refresh-label {
				display: none;
			}

			@media (max-width: $break-medium ) {
				.refresh-label {
					display: block;
				}
			}
		}

		.domains__domain-delete {
			.delete-label {
				display: none;
			}

			@media (max-width: $break-medium ) {
				order: 1;

				.delete-label {
					display: block;
				}
			}
		}
	}

	.bulk-domain-transfer__container {

		.bulk-domain-transfer__add-domain {
			font-size: 0.875rem;
			font-weight: 500;
			color: #0675c4;
			margin-bottom: 22px;
			margin-top: 2px;
			&:hover {
				text-decoration: underline;
			}
		}

		.bulk-domain-transfer__faqs {
			.foldable-faq__question {
				padding: 16px 0;
			}
			.foldable-faq__question-text {
				font-size: 1rem;
			}
			h2 {
				font-family: Recoleta, "Noto Serif", Georgia, "Times New Roman", Times, serif;
				font-size: 2rem;
				margin: 24px 0;
				text-align: center;
			}
			li {
				font-size: 1rem;
			}
			section {
				margin-top: 120px;
			}
			ul {
				list-style: none;
				margin: 0 0 48px 0;
			}
		}

		.bulk-domain-transfer__import-dns-records {
			text-align: center;

			.form-checkbox {
				float: none;
			}

			.form-label {
				display: inline;
			}

			.form-checkbox + span {
				display: inline;
			}

			@media (max-width: $break-medium ) {
				margin-bottom: 50px;
			}
		}

		.bulk-domain-transfer__cta-container {
			display: flex;
			justify-content: center;
			margin-bottom: 32px;

			.bulk-domain-transfer__cta {
				justify-content: center;
				color: var(--black-white-white, #fff);
				height: 48px;
				/* stylelint-disable-next-line declaration-property-unit-allowed-list */
				border-radius: 0.25rem;
				background: var(--blue-blue-50, #0675c4);
				font-size: 0.875rem;
				width: 240px;

				&:hover {
					background: var(--studio-blue-60);
				}

				&:disabled {
					/* stylelint-disable-next-line declaration-property-unit-allowed-list */
					border-radius: 0.25rem;
					background: var(--gray-gray-5, #dcdcde);
					opacity: 1;
				}

				@media (max-width: $break-medium ) {
					width: 100%;
				}
			}
		}

	}

	.domains__domain-info-and-validation {
		margin-bottom: 12px;

		@media (max-width: $break-medium ) {
			margin-bottom: 32px;

			&:not(:first-of-type) {
				border-top: solid 1px var(--studio-gray-5);
				padding-top: 32px;
			}
		}

		.form-input-validation {
			padding: 0;

			// remove icon
			svg {
				display: none;
			}

			a {
				text-decoration: underline;
			}
		}
	}

	p.loading-placeholder {
		width: 300px;
		@include placeholder();
	}

	button.loading-placeholder {
		width: 150px;
		@include placeholder();
	}
}

